++++++++

- Fix date validation to not crash on years before 1900 (https://launchpad.net/bugs/960367)
- Fixed section delete view when school year was created with non-ascii title (https://launchpad.net/bugs/963740)
- XLS import automatically adds teachers and students to the corresponding groups
- Fix breakage if intervention plugin was used, but then disabled (https://launchpad.net/bugs/969221)


2.0.3 (2012-03-19)
------------------

New features
++++++++++++

- Dynamic javascript person and other tables
- Can search persons and contacts by full name or partial names
- Add all search results button in relationship views
- Photos for persons (https://launchpad.net/bugs/683316)
- Added ID cards for persons and groups 
- Tab hiding (https://launchpad.net/bugs/938810)
- Sections need locations (https://launchpad.net/bugs/932920)
- Update jQuery to 1.7.1
- Add more options from paster to start-schooltool-instance.
- Updated translations, added Occitan (oc).


Bugfixes
++++++++

- Server tab not highlighted, no breadcrumbs (https://launchpad.net/bugs/868435)
- Make (weekly) schedules only contain schooldays (https://launchpad.net/bugs/930312)
- Prevented duplicated demographics field IDs (https://launchpad.net/bugs/783887)
- Gradebook popup fixes (https://launchpad.net/bugs/886257)

Development tools
+++++++++++++++++

- Selenium testing improvements
- Selenium browser extensions


2.0.2 (2012-02-14)
------------------

- Added integer demographic fields.

Bugfixes
++++++++

- Fixed the password edit view (https://launchpad.net/bugs/868411)
- Allow optional Selection List demographics fields to remain unset (https://launchpad.net/bugs/898219)
- Fixed person edit view to show limited demographics fields (https://launchpad.net/bugs/914609)
- Sorted section list in person accordion (https://launchpad.net/bugs/921373)
- Move 'School name' to the bottom of Customize menu (https://launchpad.net/bugs/876797)