@@ -6,6 +6,7 @@ develop = .
 [versions]
 # Unset versions of packages you want to develop
 schooltool =
+Pillow = 1.7.6
 
 [package]
 eggs = schooltool
