@@ -67,7 +67,7 @@ Javascript will be usable, although perhaps not very nice or convenient.""",
     install_requires=['hurry.query',
                       'PasteDeploy',
                       'PasteScript',
-                      'PIL',
+                      'Pillow',
                       'pytz',
                       'reportlab',
                       'rwproperty',
